--- a/sass/partials/_navbar.scss
+++ b/sass/partials/_navbar.scss
@@ -255,7 +255,6 @@ $dark-header-hover-bg-color: darken($dark-header-color, 2%);
 .navbar-default.navbar-transparent {
 	width: 100%;
 	position: absolute;
-	top: 20px;
 	border-bottom: none;
 	background-color: transparent;
 	z-index: 1;
